[project]
name = "darkprompts"
description = "Slightly better random prompt generation tools that allow combining and picking prompts from both file and text input sources."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/darkpixel/darkprompts"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "darkprompts"
Icon = ""
